--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -4,7 +4,7 @@
 
 #games {
   table {
-    background-color: #aaa; 
+    background-color: #aaa;
     width: 100%;}
 
   tbody {
@@ -13,7 +13,9 @@
     overflow: auto; }
 
   th, td {
-    padding: 3px 10px; }
+    padding: 3px 10px;
+    width: 25%; }
 
   thead > tr, tbody {
+    width: 100%;
     display:block; } }
