--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -17,7 +17,7 @@
     %thead
       %tr
         %th.name Player
-        %th.high-score Score
+        %th.score Score
         %th.date Date
         %th.duration Duration
 
